# pinocchio

./: Cargo.toml
programs/memo/: Cargo.toml  README.md
programs/memo/src/: lib.rs
programs/memo/src/instructions/: mod.rs
